Resolved mobile view issue to the best of my ability. Further worked on mobile responsiveness.

--- a/src/styles/less/App.less
+++ b/src/styles/less/App.less
@@ -26,7 +26,7 @@ body {
 .container {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: calc(100%);
   position: fixed;
 
   @media (max-width: 500px) {
